Subiendo ejercicio de descuentos primera parte

--- a/style/style.css
+++ b/style/style.css
@@ -75,4 +75,8 @@ body {
   color: #fff;
   border-bottom-color: #fff;
 }
+
+/* .price-result{
+  display: none;
+} */
 /*# sourceMappingURL=style.css.map */
